2010-02-09  Mike Frysinger  <vapier@gentoo.org>

  * src/urjtag.pc.in: Include -Llibdir in default output and let pkg-config
    worry about filtering it properly.

2010-02-08  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/cable.h (urj_tap_cable_usb_probe): New prototype.
  * src/tap/cable/generic_usbconn.c (urj_tap_cable_usb_probe): New function
    to autodetect USB cables.
  * src/cmd/cmd_cable.c (cmd_cable_run): Add a new "probe" driver to call each
    busses' autodetection routine.

  * data/analog/bf592/bf592: Add missing common registers and instructions.

  * src/bfin/bfin-part-bfin.c (bfin_init): Add BF548M and BF592.
  * data/analog/PARTS: Add note that bfin_init() needs to be in sync.

  * src/bfin/bfin.c (bfin_set_scan): Replace assert() with a more helpful error
    message showing the instruction that had a problem with loading.

2010-02-08  Jie Zhang  <jie.zhang@analog.com>

  * include/urjtag/part.h (struct URJ_PART_PARAMS): Add wait_ready.
  * include/urjtag/bfin.h (bfin_wait_clocks): Declare.
  * include/urjtag/chain.h (urj_tap_chain_wait_ready): Declare.
  * src/tap/chain.c (urj_tap_chain_wait_ready): New.
  * src/tap/tap.c (urj_tap_defer_shift_register): Call
    urj_tap_chain_wait_ready if Run-Test/Idle.
  * src/bfin/bfin.c (bfin_wait_clocks): Define.
    (part_emudat_defer_get): Call chain_wait_ready when Run-Test/Idle.
    (part_emudat_get): Likewise.
  * src/bfin/bfin-part-bfin.c: Include <sysdep.h>, <urjtag/chain.h>,
    <urjtag/cable.h> and <urjtag/log.h>.
    (bfin_wait_ready): New.
    (bfin_part_init): Init wait_ready.

2010-02-06  Jie Zhang  <jie.zhang@analog.com>

  * include/urjtag/cable.h (enum action): Add URJ_TAP_CABLE_CLOCK_COMPACT.
  * src/tap/cable/generic.c (do_one_queued_action): Handle
    URJ_TAP_CABLE_CLOCK_COMPACT to turn off GCC warning.
  * src/tap/cable/ft2232.c (ft2232_clock_compact_schedule): New.
    (ft2232_flush): Compact consecutive clocks.

2010-02-05  Mike Frysinger  <vapier@gentoo.org>
